@@ -81,7 +81,7 @@ extern "C" {
 
 # ifndef EV_USE_NANOSLEEP
 #  if HAVE_NANOSLEEP
-#   define EV_USE_NANOSLEEP 1
+#   define EV_USE_NANOSLEEP EV_FEATURE_OS
 #  else
 #   define EV_USE_NANOSLEEP 0
 #  endif
@@ -89,7 +89,7 @@ extern "C" {
 
 # ifndef EV_USE_SELECT
 #  if HAVE_SELECT && HAVE_SYS_SELECT_H
-#   define EV_USE_SELECT 1
+#   define EV_USE_SELECT EV_FEATURE_BACKENDS
 #  else
 #   define EV_USE_SELECT 0
 #  endif
@@ -97,7 +97,7 @@ extern "C" {
 
 # ifndef EV_USE_POLL
 #  if HAVE_POLL && HAVE_POLL_H
-#   define EV_USE_POLL 1
+#   define EV_USE_POLL EV_FEATURE_BACKENDS
 #  else
 #   define EV_USE_POLL 0
 #  endif
@@ -105,7 +105,7 @@ extern "C" {
    
 # ifndef EV_USE_EPOLL
 #  if HAVE_EPOLL_CTL && HAVE_SYS_EPOLL_H
-#   define EV_USE_EPOLL 1
+#   define EV_USE_EPOLL EV_FEATURE_BACKENDS
 #  else
 #   define EV_USE_EPOLL 0
 #  endif
@@ -113,7 +113,7 @@ extern "C" {
    
 # ifndef EV_USE_KQUEUE
 #  if HAVE_KQUEUE && HAVE_SYS_EVENT_H
-#   define EV_USE_KQUEUE 1
+#   define EV_USE_KQUEUE EV_FEATURE_BACKENDS
 #  else
 #   define EV_USE_KQUEUE 0
 #  endif
@@ -121,7 +121,7 @@ extern "C" {
    
 # ifndef EV_USE_PORT
 #  if HAVE_PORT_H && HAVE_PORT_CREATE
-#   define EV_USE_PORT 1
+#   define EV_USE_PORT EV_FEATURE_BACKENDS
 #  else
 #   define EV_USE_PORT 0
 #  endif
@@ -129,7 +129,7 @@ extern "C" {
 
 # ifndef EV_USE_INOTIFY
 #  if HAVE_INOTIFY_INIT && HAVE_SYS_INOTIFY_H
-#   define EV_USE_INOTIFY 1
+#   define EV_USE_INOTIFY EV_FEATURE_OS
 #  else
 #   define EV_USE_INOTIFY 0
 #  endif
@@ -137,7 +137,7 @@ extern "C" {
 
 # ifndef EV_USE_SIGNALFD
 #  if HAVE_SIGNALFD && HAVE_SYS_SIGNALFD_H
-#   define EV_USE_SIGNALFD 1
+#   define EV_USE_SIGNALFD EV_FEATURE_OS
 #  else
 #   define EV_USE_SIGNALFD 0
 #  endif
@@ -145,7 +145,7 @@ extern "C" {
 
 # ifndef EV_USE_EVENTFD
 #  if HAVE_EVENTFD
-#   define EV_USE_EVENTFD 1
+#   define EV_USE_EVENTFD EV_FEATURE_OS
 #  else
 #   define EV_USE_EVENTFD 0
 #  endif
